--- a/views/pages/partials/head.ejs
+++ b/views/pages/partials/head.ejs
@@ -3,7 +3,13 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <script src="https://cdn.tailwindcss.com"></script>
-  <script src="script.js"></script>
+  <script>
+    document
+      .getElementsByTagName("button")
+      .addEventListener("click", function () {
+        console.log("button clicked")
+      })
+  </script>
   <link
     href="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.css"
     rel="stylesheet"
