--- a/views/pages/partials/head.ejs
+++ b/views/pages/partials/head.ejs
@@ -4,13 +4,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <script src="https://cdn.tailwindcss.com"></script>
   <script>
-    var buttons = document.getElementsByTagName("button")
-    var btnsArray = Array.prototype.slice.call(buttons)
-    btnsArray.forEach((element) => {
-      element.addEventListener("click", () => {
+    var buttons = document
+      .getElementById("#Vm5JXU3E7M")
+      .addEventListener("click", () => {
         console.log("testing")
       })
-    })
   </script>
   <link
     href="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.css"
