--- a/views/pages/partials/head.ejs
+++ b/views/pages/partials/head.ejs
@@ -5,7 +5,7 @@
   <script src="https://cdn.tailwindcss.com"></script>
   <script>
     var buttons = document
-      .getElementById("#Vm5JXU3E7M")
+      .getElementById("Vm5JXU3E7M")
       .addEventListener("click", () => {
         console.log("testing")
       })
