--- a/views/pages/partials/head.ejs
+++ b/views/pages/partials/head.ejs
@@ -4,11 +4,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <script src="https://cdn.tailwindcss.com"></script>
   <script>
-    var buttons = document
-      .getElementById("Vm5JXU3E7M")
-      .addEventListener("click", () => {
-        console.log("testing")
-      })
+    console.log("Hello world")
   </script>
   <link
     href="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.css"
