--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -3,7 +3,7 @@
   <%- include('partials/head.ejs'); %>
   <body>
     <header>Header here</header>
-    <main class="max-w-7xl">
+    <main class="max-w-3xl mx-auto">
         <ul style="list-style: none;padding-top: 20px;" >
       <% for(var i=0; i<headerMenue.links.length; i++) {%>
           <li style=" display: inline; margin: 5px;">
