--- a/views/pages/partials/head.ejs
+++ b/views/pages/partials/head.ejs
@@ -4,9 +4,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <script src="https://cdn.tailwindcss.com"></script>
   <script src="https://cdn.tailwindcss.com?plugins=forms,typography"></script>
-  <script>
-    console.log("Hello world")
-  </script>
+  <script src="script.js"></script>
   <link
     href="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.css"
     rel="stylesheet"
