--- a/views/pages/partials/head.ejs
+++ b/views/pages/partials/head.ejs
@@ -4,7 +4,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <script src="https://cdn.tailwindcss.com"></script>
   <script src="https://cdn.tailwindcss.com?plugins=forms,typography"></script>
-  <script src="script.js"></script>
+  <script>
+    console.log("Testing");
+  </script>
   <link
     href="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.css"
     rel="stylesheet"
