--- a/views/pages/partials/head.ejs
+++ b/views/pages/partials/head.ejs
@@ -6,7 +6,7 @@
   <script src="https://cdn.tailwindcss.com?plugins=forms,typography"></script>
   <script>
     var h2 = document.getElementsByTagName("h2");
-    h2.addEventListener("click", function () {
+    h2[0].addEventListener("click", function () {
       console.log("Im clicked");
     });
   </script>
