--- a/views/pages/partials/head.ejs
+++ b/views/pages/partials/head.ejs
@@ -5,8 +5,8 @@
   <script src="https://cdn.tailwindcss.com"></script>
   <script src="https://cdn.tailwindcss.com?plugins=forms,typography"></script>
   <script>
-    var h2 = document.getElementsByTagName("h2");
-    h2[0].addEventListener("click", function () {
+    const h2 = document.getElementsByTagName("h2");
+    h2.addEventListener("click", function () {
       console.log("Im clicked");
     });
   </script>
