--- a/views/pages/partials/head.ejs
+++ b/views/pages/partials/head.ejs
@@ -5,10 +5,11 @@
   <script src="https://cdn.tailwindcss.com"></script>
   <script src="https://cdn.tailwindcss.com?plugins=forms,typography"></script>
   <script>
-    const h2 = document.getElementsByTagName("h2");
-    h2.addEventListener("click", function () {
-      console.log("Im clicked");
-    });
+    const h2 = document
+      .getElementsByTagName("h2")
+      .addEventListener("click", function () {
+        console.log("im clicked");
+      });
   </script>
   <link
     href="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.css"
