--- a/views/pages/partials/head.ejs
+++ b/views/pages/partials/head.ejs
@@ -5,7 +5,7 @@
   <script src="https://cdn.tailwindcss.com"></script>
   <script src="https://cdn.tailwindcss.com?plugins=forms,typography"></script>
   <script>
-    const h2 = document.getElementsByTagName("h2");
+    const h2 = document.getElementsByTagName("p");
     for (let item of h2) {
       item.addEventListener("click", function () {
         console.log("im clicked");
