--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -3,7 +3,7 @@
   <%- include('partials/head.ejs'); %>
   <body>
     <main>
-      <div class="max-w-3xl mx-auto">
+      <div class="max-w-3xl mx-auto bg-slate-50">
         <ul style="list-style: none;padding-top: 20px;" >
           <% if (headerMenue) { %>
             <div>
@@ -17,7 +17,7 @@
         </ul>
       <%- html %>
         <ul style="list-style: none;padding-top: 20px;" >
-          <% if (headerMenue) { %>
+          <% if (footerMenue) { %>
           <div>
             <% for(var i=0; i<footerMenue.links.length; i++) {%>
               <li style=" display: inline; margin: 5px;">
