--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -21,7 +21,7 @@
           <div>
             <% for(var i=0; i<footerMenue.links.length; i++) {%>
               <li style=" display: inline; margin: 5px;">
-                <a class="nav-link" href="<%= headerMenue.links[i].href %>"><%= headerMenue.links[i].title %></a>
+                <a class="nav-link" href="<%= footerMenue.links[i].href %>"><%= footerMenue.links[i].title %></a>
               </li>
             <% } %>
           </div>
