--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -13,6 +13,8 @@
               </li>
             <% } %>
             </div>
+          <% } else{ %>
+            <p>no photos uploaded</p>
           <% } %>
         </ul>
       <%- html %>
@@ -25,6 +27,8 @@
               </li>
             <% } %>
           </div>
+          <% } else{ %>
+            <p>no photos uploaded</p>
           <% } %>
         </ul>
       </div>
