--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -18,7 +18,7 @@
           <% } %>
         </ul>
       <%- html %>
-        <ul style="list-style: none;padding-top: 20px;" >
+        <!-- <ul style="list-style: none;padding-top: 20px;" >
           <% if (footerMenue) { %>
           <div>
             <% for(var i=0; i<footerMenue.links.length; i++) {%>
@@ -30,7 +30,7 @@
           <% } else{ %>
             <p>no photos uploaded</p>
           <% } %>
-        </ul>
+        </ul> -->
       </div>
     </main>
   </body>
