--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -14,23 +14,10 @@
             <% } %>
             </div>
           <% } else{ %>
-            <p>no photos uploaded</p>
+            <div></div>
           <% } %>
         </ul>
       <%- html %>
-        <!-- <ul style="list-style: none;padding-top: 20px;" >
-          <% if (footerMenue) { %>
-          <div>
-            <% for(var i=0; i<footerMenue.links.length; i++) {%>
-              <li style=" display: inline; margin: 5px;">
-                <a class="nav-link" href="<%= footerMenue.links[i].href %>"><%= footerMenue.links[i].title %></a>
-              </li>
-            <% } %>
-          </div>
-          <% } else{ %>
-            <p>no photos uploaded</p>
-          <% } %>
-        </ul> -->
       </div>
     </main>
   </body>
