--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -2,8 +2,8 @@
 <html lang="en">
   <%- include('partials/head.ejs'); %>
   <body>
-    <main>
-      <div class="max-w-3xl mx-auto bg-slate-50">
+    <main class="bg-slate-50">
+      <div class="max-w-3xl mx-auto bg-white shadow shadow-sm">
         <ul style="list-style: none;padding-top: 20px;" >
           <% if (headerMenue) { %>
             <div>
