--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -4,12 +4,12 @@
   <body>
     <main class="bg-slate-50">
       <div class="max-w-3xl mx-auto bg-white shadow shadow-sm">
-        <ul style="list-style: none;padding-top: 20px;" class="bg-white py-8 shadow sm:rounded-lg mt-4 mb-4" >
+        <ul style="list-style: none;padding-top: 20px;" class="bg-white py-8 shadow sm:rounded-lg" >
           <% if (headerMenue) { %>
             <div>
             <% for(var i=0; i<headerMenue.links.length; i++) {%>
               <li style=" display: inline; margin: 5px;">
-                <a class="nav-link" href="<%= headerMenue.links[i].href %>"><%= headerMenue.links[i].title.toUpperCase() %></a>
+                <a class="nav-link" href="<%= headerMenue.links[i].href %>"><%= headerMenue.links[i].title %></a>
               </li>
             <% } %>
             </div>
