--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -4,7 +4,7 @@
   <body>
     <main class="bg-slate-50">
       <div class="max-w-3xl mx-auto bg-white shadow shadow-sm">
-        <ul style="list-style: none;padding-top: 20px;" class="bg-white py-8 shadow sm:rounded-lg" >
+        <ul style="list-style: none;padding-top: 20px;" class="bg-white py-8 shadow sm:rounded-lg flex items-center justify-evenly" >
           <% if (headerMenue) { %>
             <div>
             <% for(var i=0; i<headerMenue.links.length; i++) {%>
