--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -9,7 +9,7 @@
             <div>
             <% for(var i=0; i<headerMenue.links.length; i++) {%>
               <li style=" display: inline; margin: 5px;">
-                <a class="nav-link text-md text-gray-900 hover:text-underline" href="<%= headerMenue.links[i].href %>"><%= headerMenue.links[i].title %></a>
+                <a class="nav-link text-md text-gray-900 hover:underline" href="<%= headerMenue.links[i].href %>"><%= headerMenue.links[i].title %></a>
               </li>
             <% } %>
             </div>
