--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -2,7 +2,7 @@
 <html lang="en">
   <%- include('partials/head.ejs'); %>
   <body>
-    <main class="bg-slate-50">
+    <main class="bg-indigo-50">
       <div class="max-w-3xl mx-auto bg-white shadow shadow-sm">
         <ul style="list-style: none;padding-top: 20px;" class="bg-white py-8 shadow sm:rounded-lg flex items-center justify-evenly" >
           <% if (headerMenue) { %>
