--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -3,7 +3,7 @@
   <%- include('partials/head.ejs'); %>
   <body>
     <main class="bg-indigo-50">
-      <div class="max-w-3xl mx-auto bg-white shadow shadow-sm p-2">
+      <div class="max-w-3xl mx-auto shadow shadow-sm p-2">
         <ul style="list-style: none;padding-top: 20px;" class="bg-white py-8 shadow sm:rounded-lg flex items-center justify-evenly" >
           <% if (headerMenue) { %>
             <div>
