--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -5,6 +5,7 @@
     <main class="bg-slate-50">
       <div class="max-w-3xl mx-auto shadow shadow-sm p-2">
         <ul style="list-style: none;padding-top: 20px;" class="bg-white py-8 shadow sm:rounded-lg flex items-center justify-evenly" >
+          <h1 class="font-bold text-xl"><%= funnelTitle %></h1>
           <% if (headerMenue) { %>
             <div>
             <% for(var i=0; i<headerMenue.links.length; i++) {%>
