--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -4,13 +4,13 @@
   <body>
     <main class="bg-slate-50">
       <div class="max-w-3xl mx-auto shadow shadow-sm p-2">
-        <ul style="list-style: none;padding-top: 20px;" class="bg-white py-8 shadow sm:rounded-lg flex items-center justify-between px-2" >
-          <a href="/" class="font-bold text-xl capitalize text-gray-700"><%= funnelTitle %></a>
+        <ul style="list-style: none;padding-top: 20px;" class="bg-white py-8 shadow sm:rounded-lg flex items-center justify-between px-6" >
+          <a href="/" class="font-bold text-xl capitalize text-gray-700 hover:text-gray-600"><%= funnelTitle %></a>
           <% if (headerMenue) { %>
             <div>
             <% for(var i=0; i<headerMenue.links.length; i++) {%>
               <li style=" display: inline; margin: 5px;">
-                <a class="nav-link text-md text-gray-900 hover:underline" href="<%= headerMenue.links[i].href %>"><%= headerMenue.links[i].title %></a>
+                <a class="nav-link capitalize text-md text-gray-900 hover:underline" href="<%= headerMenue.links[i].href %>"><%= headerMenue.links[i].title %></a>
               </li>
             <% } %>
             </div>
