--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -6,7 +6,7 @@
       <div class="max-w-3xl mx-auto shadow shadow-sm p-2">
         <ul style="list-style: none;padding-top: 20px;" class="bg-white py-8 shadow sm:rounded-lg flex items-center justify-between px-6" >
           <a href="/" class="font-semibold text-xl capitalize text-gray-700 hover:text-gray-600"><%= funnelTitle %></a>
-          <% if (headerMenue) { %>
+          <% if (headerMenue.links) { %>
             <div>
             <% for(var i=0; i<headerMenue.links.length; i++) {%>
               <li style=" display: inline; margin: 5px;">
@@ -19,6 +19,20 @@
           <% } %>
         </ul>
       <%- html %>
+      <ul style="list-style: none;padding-top: 20px;" class="bg-white py-8 shadow sm:rounded-lg flex items-center justify-between px-6" >
+        <a href="/" class="font-semibold text-xl capitalize text-gray-700 hover:text-gray-600"><%= funnelTitle %></a>
+        <% if (footerMenue.links) { %>
+          <div>
+          <% for(var i=0; i<footerMenue.links.length; i++) {%>
+            <li style=" display: inline; margin: 5px;">
+              <a class="nav-link capitalize text-md text-gray-900 hover:underline" href="<%= footerMenue.links[i].href %>"><%= headerMenue.links[i].title %></a>
+            </li>
+          <% } %>
+          </div>
+        <% } else{ %>
+          <div></div>
+        <% } %>
+      </ul>
       </div>
     </main>
   </body>
