--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -3,8 +3,8 @@
   <%- include('partials/head.ejs'); %>
   <body>
     <main class="bg-slate-50">
-      <div class="max-w-3xl mx-auto shadow shadow-sm p-2">
-        <ul style="list-style: none;padding-top: 20px;" class="bg-white py-8 shadow sm:rounded-lg flex items-center justify-between px-6" >
+      <div class="max-w-3xl mx-auto py-8 shadow sm:rounded-lg p-2">
+        <ul style="list-style: none;padding-top: 20px;" class="bg-white  flex items-center justify-between px-6" >
           <a href="/" class="font-semibold text-xl capitalize text-gray-700 hover:text-gray-600"><%= funnelTitle %></a>
           <% if (headerMenue.links) { %>
             <div>
@@ -25,7 +25,7 @@
           <div>
           <% for(var i=0; i<footerMenue.links.length; i++) {%>
             <li style=" display: inline; margin: 5px;">
-              <a class="nav-link capitalize text-md text-gray-900 hover:underline" href="<%= footerMenue.links[i].href %>"><%= headerMenue.links[i].title %></a>
+              <a class="nav-link capitalize text-md text-gray-900 hover:underline" href="<%= footerMenue.links[i].href %>"><%= footerMenue.links[i].title %></a>
             </li>
           <% } %>
           </div>
