--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -19,7 +19,7 @@
           <% } %>
         </ul>
       <%- html %>
-      <ul style="list-style: none;padding-top: 20px;" class="pt-8 shadow sm:rounded-lg flex items-center justify-between px-6" >
+      <ul style="list-style: none;padding-top: 20px;" class=" pb-8 flex items-center justify-between px-6" >
         <a href="/" class="font-semibold text-xl capitalize text-gray-700 hover:text-gray-600"><%= funnelTitle %></a>
         <% if (footerMenue.links) { %>
           <div>
