--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -20,7 +20,7 @@
         </ul>
       <%- html %>
       <footer  aria-labelledby="footer-heading">
-        <div class="mt-12 border-t border-gray-200 pt-8">
+        <div class="border-t border-gray-200 pt-8">
           <p class="text-base text-gray-400 xl:text-center">Powered by <a href="https://www.funnelshero.com" class="text-indigo-700 hover:text-indigo-600">Funnelshero</a></p>
         </div>
       </div>
