--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -18,7 +18,9 @@
             <div></div>
           <% } %>
         </ul>
+        <div class="px-4">
       <%- html %>
+        </div>
       <footer  aria-labelledby="footer-heading">
         <div class="mt-8 border-t border-gray-200 pt-8">
           <p class="text-base text-gray-400 xl:text-center">Powered by <a href="https://www.funnelshero.com" class="text-indigo-700 hover:text-indigo-600">Funnelshero</a></p>
