--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -3,7 +3,7 @@
   <%- include('partials/head.ejs'); %>
   <body>
     <main class="bg-slate-50">
-      <div class="max-w-3xl mx-auto py-8 shadow sm:rounded-lg p-2 bg-white">
+      <div class="max-w-3xl mx-auto py-8 shadow sm:rounded-lg p-2 bg-white border-t border-gray-200">
         <ul style="list-style: none;padding-top: 20px;" class=" pb-8 flex items-center justify-between px-6" >
           <a href="/" class="font-semibold text-xl capitalize text-gray-700 hover:text-gray-600"><%= funnelTitle %></a>
           <% if (headerMenue.links) { %>
