--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -5,7 +5,12 @@
     <main class="bg-slate-50" style="min-height: 100vh;">
       <div class="max-w-3xl mx-auto py-8 shadow sm:rounded-lg p-2 bg-white border-b border-gray-200">
         <ul style="list-style: none;padding-top: 20px;" class=" pb-8 flex items-center justify-between px-6" >
-          <a href="/" class="font-semibold text-xl capitalize text-gray-700 hover:text-gray-600"><%= funnelTitle %></a>
+          <% if (image) { %>
+            <img src="<%= funnelTitle %>" height="50" width="50" style="object-fit: cover;" alt="">
+          <% } else{ %>
+            <a href="/" class="font-semibold text-xl capitalize text-gray-700 hover:text-gray-600"><%= funnelTitle %></a>
+          <% } %>
+
           <% if (headerMenue.links) { %>
             <div>
             <% for(var i=0; i<headerMenue.links.length; i++) {%>
