--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -2,6 +2,11 @@
 <html lang="en">
   <%- include('partials/head.ejs'); %>
   <body>
+    <!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-TXQF4PV"
+  height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+  <!-- End Google Tag Manager (noscript) -->
+
     <main class="bg-slate-50" style="min-height: 100vh;">
       <div class="max-w-3xl mx-auto py-8 shadow sm:rounded-lg p-2 bg-white border-b border-gray-600">
         <ul style="list-style: none;padding-top: 20px;" class=" pb-8 flex items-center justify-between px-6" >
