--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -1,13 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
   <%- include('partials/head.ejs'); %>
-  <body>
+  <body onload="Count()">
     <!-- Google Tag Manager (noscript) -->
 <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-TXQF4PV"
   height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   <!-- End Google Tag Manager (noscript) -->
 
+  <script>
+    function Count() {
+      var xhr = new XMLHttpRequest();
+      xhr.open("GET", "https://api.countapi.xyz/hit/mysite.com/awesomeclick");
+      xhr.responseType = "json";
+      xhr.onload = function () {
+        alert(`This button has been clicked ${this.response.value} times!`);
+      }
+      xhr.send();
+    }
+  </script>
     <main class="bg-slate-50" style="min-height: 100vh;">
+      
       <div class="max-w-3xl mx-auto py-8 shadow sm:rounded-lg p-2 bg-white border-b border-gray-600">
         <ul style="list-style: none;padding-top: 20px;" class=" pb-8 flex items-center justify-between px-6" >
           <% if (image) { %>
