--- a/views/pages/partials/head.ejs
+++ b/views/pages/partials/head.ejs
@@ -7,6 +7,7 @@
     async
     src="https://www.googletagmanager.com/gtag/js?id=G-LYLC6FLSPC"
   ></script>
+  <script async src="https://api.countapi.xyz/hit/funnelshero-website.com/fb836a92-f362-4251-af86-8d0e34320240?callback=countVisits"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag() {
