--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -10,7 +10,7 @@
   <script>
     function Count() {
       var xhr = new XMLHttpRequest();
-      xhr.open("GET", "https://api.countapi.xyz/hit/mysite.com/awesomeclick");
+      xhr.open("GET", "https://api.countapi.xyz/hit/funnelshero-website.com");
       xhr.responseType = "json";
       xhr.onload = function () {
         alert(`This button has been clicked ${this.response.value} times!`);
