--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -7,7 +7,7 @@
   height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   <!-- End Google Tag Manager (noscript) -->
 
-  <script>
+  <!-- <script>
     function Count() {
       var xhr = new XMLHttpRequest();
       xhr.open("GET", `https://api.countapi.xyz/hit/${document.location.href}`);
@@ -17,7 +17,7 @@
       }
       xhr.send();
     }
-  </script>
+  </script> -->
     <main class="bg-slate-50" style="min-height: 100vh;">
       
       <div class="max-w-3xl mx-auto py-8 shadow sm:rounded-lg p-2 bg-white border-b border-gray-600">
