--- a/views/pages/partials/head.ejs
+++ b/views/pages/partials/head.ejs
@@ -53,6 +53,21 @@
     href="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.css"
     rel="stylesheet"
   />
+
+  <style>
+    .small-icon {
+	    width: 16px;
+	    height: 16px;
+    }
+    .medium-icon {
+	    width: 24px;
+	    height: 24px;
+    }
+    .large-icon {
+	    width: 36px;
+	    height: 36px;
+    }
+  </style>
   <script src="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.js"></script>
   <link
     rel="stylesheet"
